<resources>
    <string name="app_name">Ej09LinearLayoutCarritoCompra</string>
    <string name="carrito">Carrito de la compra</string>
    <string name="producto1">Producto 1</string>
    <string name="producto2">Producto 2</string>
    <string name="producto3">Producto 3</string>
    <string name="unidades">unidades</string>
    <string name="botonenviarcorreo">Enviar por correo electrónico</string>
    <string name="botonvolver">Volver</string>
    <string name="botonconfirmar">Confirmar</string>
    <string name="importe">Importe</string>
    <string name="iva">I.V.A.</string>
    <string name="total">Total</string>
    <string name="precio1">000.00€</string>
    <string name="precio2">00.00€</string>
    <string name="precio3">0000.00€</string>
</resources>
