<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.asel.ej09linearlayoutcarritocompra.LinearLayoutActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:text="@string/carrito"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCarrito" />

    <TextView
        android:text=""
        android:height="1dp"
        android:background="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLinea1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/producto1"
                android:textColor="@color/colorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewProducto1"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <EditText
                android:background="@color/colorBackgroundEditText"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint=""
                android:id="@+id/editText1"/>

            <TextView
                android:text="@string/unidades"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUnidades1"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/producto2"
                android:textColor="@color/colorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewProducto2"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <EditText
                android:background="@color/colorBackgroundEditText"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint=""
                android:id="@+id/editText2"/>

            <TextView
                android:text="@string/unidades"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUnidades2"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/producto3"
                android:textColor="@color/colorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewProducto3"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <EditText
                android:background="@color/colorBackgroundEditText"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint=""
                android:id="@+id/editText3"/>

            <TextView
                android:text="@string/unidades"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUnidades3"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <Button
            android:text="@string/botonenviarcorreo"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEnviarCorreo"/>

    </LinearLayout>

    <TextView
        android:text=""
        android:height="1dp"
        android:background="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLinea2"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/importe"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewImporte"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/precio1"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPrecio1"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/iva"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewIva"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/precio2"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPrecio2"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/total"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTotal"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/precio3"
                android:textColor="@color/colorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPrecio3"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text=""
        android:height="1dp"
        android:background="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLinea3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/botonvolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVolver"
            android:layout_weight="1"
            android:textAllCaps="false"
            style="none"/>

        <Button
            android:text="@string/botonconfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConfirmar"
            android:layout_weight="1"
            android:textAllCaps="false"
            style="none"/>

    </LinearLayout>

</LinearLayout>
